# Monitor

./: .gitignore  CMakeLists.txt  INSTALL  config.txt  mkbuild  mkdebug  monitor.cfg  monitor.demo.cfg  monitor.service  monitor.service.default  monitor.sh  readme.md  send-slack.sh
services/: monitor.initd  monitor.service
src/: Makefile  config.cpp  control.cpp  control.hh  cplan  curler.cpp  curler.hh  curler_stub.cpp  deploy.hh  logfiles.cpp  main.cpp  main.hh  monitor.cpp  monitor.hh  pipe.cpp  pipe.hh  procstat.cpp  revision.cpp  util.cpp
